--- a/src/components/Marquee/Marquee.module.css
+++ b/src/components/Marquee/Marquee.module.css
@@ -1,10 +1,10 @@
 .root {
   margin-top: 2rem;
-  padding: 1rem 8vw;
-  font-size: 3rem;
+  padding: 1rem 0 1rem 0.35em;
+  font-size: clamp(1rem, 4vw, 4rem);
   font-weight: 900;
   border: 4px solid var(--grey-000);
-  border-width: 5px 0;
+  border-width: clamp(0.1rem, 0.5vw, 0.6rem) 0;
   text-transform: uppercase;
   white-space: nowrap;
 }
@@ -12,7 +12,7 @@
 .contentWrapper {
   position: relative;
   width: fit-content;
-  animation: marquee 8s linear infinite;
+  /* animation: marquee 8s linear infinite; */
 }
 
 .main {
