--- a/src/components/Marquee/Marquee.module.css
+++ b/src/components/Marquee/Marquee.module.css
@@ -1,10 +1,9 @@
 .root {
-  margin-top: 2rem;
   padding: 1rem 0 1rem 0.35em;
-  font-size: clamp(0.9rem, 4vw, 3.6rem);
+  font-size: clamp(0.9rem, 4vw, 2.2rem);
   font-weight: 900;
-  border: 4px solid var(--grey-000);
-  border-width: clamp(0.2rem, 0.5vw, 0.6rem) 0;
+  border: 4px solid currentColor;
+  border-width: clamp(0.1rem, 0.5vw, 0.3rem) 0;
   text-transform: uppercase;
   white-space: nowrap;
 }
@@ -12,7 +11,7 @@
 .contentWrapper {
   position: relative;
   width: fit-content;
-  /* animation: marquee 8s linear infinite; */
+  animation: marquee 8s linear infinite;
 }
 
 .main {
