--- a/src/components/MeshSurface/MeshSurface.module.css
+++ b/src/components/MeshSurface/MeshSurface.module.css
@@ -104,7 +104,7 @@
 .shadow {
   position: absolute;
   inset: 0;
-  box-shadow: inset 0 0 0.5rem var(--grey-000), inset 0 0 2rem var(--grey-000);
+  box-shadow: inset 0 0 0.5rem var(--grey-200), inset 0 0 2rem var(--grey-300);
   mix-blend-mode: overlay;
   border-radius: clamp(1rem, 6vw, 12rem);
 }
@@ -112,7 +112,7 @@
 .blur {
   position: absolute;
   inset: 0;
-  /* backdrop-filter: blur(10px); */
+  backdrop-filter: blur(20px);
 }
 
 .grain {
